@@ -32,32 +32,34 @@ public class ShortcutHandler extends AbstractJArmEmuModule {
     }
 
     public void handle(KeyEvent event) {
-        if (event.isShortcutDown()) {
-            if (event.isShiftDown()) {
-                switch (event.getCode()) {
-                    case S -> getMainMenuController().onSaveAll();
-                    case R -> getMainMenuController().onReloadAll();
+        try {
+            if (event.isShortcutDown()) {
+                if (event.isShiftDown()) {
+                    switch (event.getCode()) {
+                        case S -> getMainMenuController().onSaveAll();
+                        case R -> getMainMenuController().onReloadAll();
+                    }
+                } else {
+                    switch (event.getCode()) {
+                        case S -> getMainMenuController().onSave();
+                        case O -> getMainMenuController().onOpen();
+                        case R -> getMainMenuController().onReload();
+                        case N -> getMainMenuController().onNewFile();
+                        case B -> getEditorController().currentFileEditor().getContextMenu().onToggleBreakpoint(new ActionEvent());
+                        case F -> getEditorController().currentFileEditor().toggleFindAndReplace();
+                    }
                 }
             } else {
                 switch (event.getCode()) {
-                    case S -> getMainMenuController().onSave();
-                    case O -> getMainMenuController().onOpen();
-                    case R -> getMainMenuController().onReload();
-                    case N -> getMainMenuController().onNewFile();
-                    case B -> getEditorController().currentFileEditor().getContextMenu().onToggleBreakpoint(new ActionEvent());
-                    case F -> getEditorController().currentFileEditor().toggleFindAndReplace();
+                    case F2 -> getSimulationMenuController().onSimulate();
+                    case F3 -> getSimulationMenuController().onStepInto();
+                    case F4 -> getSimulationMenuController().onStepOver();
+                    case F5 -> getSimulationMenuController().onContinue();
+                    case F6 -> getSimulationMenuController().onPause();
+                    case F7 -> getSimulationMenuController().onStop();
+                    case F8 -> getSimulationMenuController().onRestart();
                 }
             }
-        } else {
-            switch (event.getCode()) {
-                case F2 -> getSimulationMenuController().onSimulate();
-                case F3 -> getSimulationMenuController().onStepInto();
-                case F4 -> getSimulationMenuController().onStepOver();
-                case F5 -> getSimulationMenuController().onContinue();
-                case F6 -> getSimulationMenuController().onPause();
-                case F7 -> getSimulationMenuController().onStop();
-                case F8 -> getSimulationMenuController().onRestart();
-            }
-        }
+        } catch (IndexOutOfBoundsException | NullPointerException ignored) {}
     }
 }
