@@ -23,25 +23,141 @@
 
 package fr.dwightstudio.jarmemu.gui.editor;
 
+import fr.dwightstudio.jarmemu.asm.*;
 import fr.dwightstudio.jarmemu.gui.controllers.FileEditor;
+import fr.dwightstudio.jarmemu.util.RegisterUtils;
+import org.apache.commons.lang3.ArrayUtils;
+import org.fxmisc.richtext.model.StyleSpansBuilder;
+import org.fxmisc.richtext.model.TwoDimensional;
+import org.reactfx.Subscription;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import static fr.dwightstudio.jarmemu.util.EnumUtils.getFromEnum;
 
 public class RealTimeParser extends Thread {
 
+    private static final String[] INSTRUCTIONS = getFromEnum(Instruction.values(), false);
+    private static final String[] KEYWORDS = ArrayUtils.addAll(getFromEnum(Directive.values(), false), getFromEnum(Section.values(), false));
+    private static final String[] REGISTERS = getFromEnum(RegisterUtils.values(), false);
+    private static final String[] CONDITIONS = getFromEnum(Condition.values(), true);
+    private static final String[] DATA_MODES = getFromEnum(DataMode.values(), true);
+    private static final String[] UPDATE_MODES = getFromEnum(UpdateMode.values(), true);
+    private static final String[] SHIFTS = new String[]{"LSL", "LSR", "ASR", "ROR", "RRX"};
+    private static final String[] UPDATE_FLAG = new String[]{"S", ""};
+
+    private static final String INSTRUCTION_PATTERN = "\\b(?i)(" + String.join("|", INSTRUCTIONS) + ")(" + String.join("|", CONDITIONS) + ")((" + String.join("|", DATA_MODES) + ")|(" + String.join("|", UPDATE_FLAG) + ")|(" + String.join("|", UPDATE_MODES) + "))\\b";
+    private static final String KEYWORD_PATTERN = "\\.\\b(?i)(" + String.join("|", KEYWORDS) + ")(?-i)\\b";
+    private static final String REGISTER_PATTERN = "\\b(?i)(" + String.join("|", REGISTERS) + ")(?-i)\\b(!|)";
+    private static final String SHIFT_PATTERN = "\\b(?i)(" + String.join("|", SHIFTS) + ")(?-i)\\b";
+    private static final String BRACE_PATTERN = "\\{|\\}";
+    private static final String BRACKET_PATTERN = "\\[|\\]";
+    private static final String LABEL_PATTERN = "[A-Za-z_0-9]+[ \t]*:";
+    private static final String STRING_PATTERN = "\"([^\"\\\\@]|\\\\.)*\"|\'([^\'\\\\@]|\\\\.)*\'";
+    private static final String COMMENT_PATTERN = "@[^\n]*";
+    private static final String IMM_PATTERN = "=[^\n@]*|#[^\n\\]@]*";
+    private static final Pattern PATTERN = Pattern.compile(
+            "(?<NEWLINE>\n)"
+                    + "|(?<COMMENT>" + COMMENT_PATTERN + ")"
+                    + "|(?<STRING>" + STRING_PATTERN + ")"
+                    + "|(?<SHIFT>" + SHIFT_PATTERN + ")"
+                    + "|(?<LABEL>" + LABEL_PATTERN + ")"
+                    + "|(?<KEYWORD>" + KEYWORD_PATTERN + ")"
+                    + "|(?<INSTRUCTION>" + INSTRUCTION_PATTERN + ")"
+                    + "|(?<REGISTER>" + REGISTER_PATTERN + ")"
+                    + "|(?<IMM>" + IMM_PATTERN + ")"
+                    + "|(?<BRACE>" + BRACE_PATTERN + ")"
+                    + "|(?<BRACKET>" + BRACKET_PATTERN + ")"
+    );
 
     private final FileEditor editor;
     private final BlockingQueue<Integer> queue;
+    private final Subscription subscription;
 
     public RealTimeParser(FileEditor editor) {
-        super("RealTimeParser-" + editor.getVisualIndex());
+        super("RealTimeParser" + editor.getVisualIndex());
         this.editor = editor;
         this.queue = new LinkedBlockingQueue<>();
+
+        subscription = editor.getCodeArea().plainTextChanges().subscribe(change -> {
+            int start = editor.getCodeArea().offsetToPosition(change.getPosition(), TwoDimensional.Bias.Forward).getMajor();
+            int stop = editor.getCodeArea().offsetToPosition(change.getInsertionEnd(), TwoDimensional.Bias.Forward).getMajor();
+
+            for (int i = start; i <= stop; i++) {
+                queue.add(i);
+            }
+        });
+
+        this.start();
     }
 
     @Override
     public void run() {
+        while (!this.isInterrupted()) {
+            try {
+                int line = queue.take();
 
+                int lastKwEnd = 0;
+                StyleSpansBuilder<Collection<String>> spansBuilder = new StyleSpansBuilder<>();
+
+                String text = editor.getCodeArea().getParagraph(line).getText();
+                Matcher matcher = PATTERN.matcher(text);
+
+                while (matcher.find()) {
+
+                    String styleClass = matcher.group("COMMENT") != null ? "comment"
+                            : matcher.group("STRING") != null ? "string"
+                            : matcher.group("SHIFT") != null ? "shift"
+                            : matcher.group("LABEL") != null ? "label"
+                            : matcher.group("KEYWORD") != null ? "keyword"
+                            : matcher.group("INSTRUCTION") != null ? "instruction"
+                            : matcher.group("REGISTER") != null ? "register"
+                            : matcher.group("BRACE") != null ? "brace"
+                            : matcher.group("BRACKET") != null ? "bracket"
+                            : matcher.group("IMM") != null ? "imm" : null;
+
+                    spansBuilder.add(Collections.emptyList(), matcher.start() - lastKwEnd);
+                    spansBuilder.add(Collections.singleton(styleClass), matcher.end() - matcher.start());
+                    lastKwEnd = matcher.end();
+                }
+
+                if (lastKwEnd != 0) editor.getCodeArea().setStyleSpans(line, 0, spansBuilder.create());
+            } catch (InterruptedException e) {
+                this.interrupt();
+            }
+        }
+    }
+
+    @Override
+    public void interrupt() {
+        super.interrupt();
+
+        subscription.unsubscribe();
+    }
+
+    /**
+     * Marque la ligne comme nécessitant une actualisation
+     *
+     * @param line la ligne à actualiser
+     */
+    public void markDirty(int line) {
+        this.queue.add(line);
+    }
+
+    /**
+     * Marque les lignes comme nécessitant une actualisation
+     *
+     * @param startLine la ligne de début
+     * @param stopLine la ligne de fin (exclue)
+     */
+    public void markDirty(int startLine, int stopLine) {
+        for (int i = startLine; i <= stopLine; i++) {
+            queue.add(i);
+        }
     }
 }
